# target_finding_ai

./: .gitignore  README.md
ai/: Cargo.toml
ai/src/: main.rs
interface/: .clang-format  CMakeLists.txt  compile_flags.txt
interface/src/: main.cpp
